--- a/app/src/main/res/layout/fragment_seleccion_nave.xml
+++ b/app/src/main/res/layout/fragment_seleccion_nave.xml
@@ -33,6 +33,8 @@
             android:orientation="horizontal">
 
             <RadioGroup
+                android:paddingTop="30dp"
+                android:paddingBottom="30dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
