--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,5 +32,33 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="Puntuacion: 0"
         android:textSize="20dp" />
+
+    <LinearLayout
+        android:id="@+id/layout_vidas"
+        android:layout_width="120dp"
+        android:layout_gravity="bottom|left"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/img_vida1"
+            android:layout_width="39dp"
+            android:layout_height="30dp"
+            android:src="@drawable/helice" />
+
+        <ImageView
+            android:id="@+id/img_vida2"
+            android:layout_width="39dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/helice" />
+
+        <ImageView
+            android:id="@+id/img_vida3"
+            android:layout_width="39dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/helice" />
+    </LinearLayout>
 
 </FrameLayout>
