--- a/app/src/main/res/layout/fragment_seleccion_nave.xml
+++ b/app/src/main/res/layout/fragment_seleccion_nave.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
+            android:fontFamily="@font/acme"
             android:gravity="center"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
@@ -29,6 +30,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="16dp"
             android:layout_height="131dp"
             android:orientation="horizontal">
 
@@ -68,11 +70,14 @@
 
         <Button
             android:id="@+id/Btn_SeleccionNaveVolver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:background="#FFFFFF"
-            android:text="Volver a Inicio" />
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/acme"
+            android:text="Volver a Inicio"
+            android:textSize="16sp" />
     </LinearLayout>
 
 </FrameLayout>
