--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -13,13 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btn_play_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="top|right"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:background="@drawable/game_button"
+        android:src="@mipmap/ic_pause_foreground"
         android:text="@string/pause" />
 
     <include layout="@layout/view_joystick" />
@@ -30,14 +32,17 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:fontFamily="@font/acme"
         android:text="Puntuacion: 0"
+        android:textColor="#000000"
         android:textSize="20dp" />
 
     <LinearLayout
         android:id="@+id/layout_vidas"
+        android:layout_marginTop="16dp"
         android:layout_width="120dp"
-        android:layout_gravity="bottom|left"
         android:layout_height="50dp"
+        android:layout_gravity="top|center"
         android:orientation="horizontal">
 
         <ImageView
