--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <ImageView
@@ -19,16 +20,23 @@
 
         <Button
             android:id="@+id/btn_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/acme"
+            android:textSize="16sp"
             android:text="@string/start" />
 
         <Button
             android:id="@+id/btn_seleccionNave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:background="@drawable/custom_button"
+            android:fontFamily="@font/acme"
+            android:textSize="16sp"
             android:text="Seleccion Nave" />
 
     </LinearLayout>
